@@ -1,3 +1,10 @@
+2009-10-23  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclIO.c (FlushChannel): Skip OutputProc for low-level
+	0-length writes. When closing pipes which have already been closed
+	not skipping leads to spurious SIG_PIPE signals. Reported by
+	Mikhail Teterin <mi+thun@aldan.algebra.com>.
+
 2009-10-21  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclPosixStr.c: [Bug 2882561]: Work around oddity on Haiku OS
